--- a/pipelines/cluster-role-binding.yaml
+++ b/pipelines/cluster-role-binding.yaml
@@ -1,4 +1,4 @@
-ind: ClusterRoleBinding
+kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tekton-default-cluster-admin
